<resources>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_details">Details</string>
    <string name="details">Details</string>
    <string name="price">Price</string>
    <string name="title_favourite">Favourite</string>
    <string name="you_did_not_add_any_favourite_item_yet">You did not add any favourite item yet</string>
    <string name="note">Note</string>
</resources>