<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.shineshiao.endeavour.feature.homepage.views.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_open_product_detail"
            app:destination="@id/navigation_product_detail"
            app:enterAnim="@anim/slide_up"
            app:exitAnim="@anim/wait_anim"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_down"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.shineshiao.endeavour.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.shineshiao.endeavour.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_product_detail"
        android:name="com.shineshiao.endeavour.feature.productdetail.views.ProductDetailFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_product_detail" >
        <argument
            android:name="currentProduct"
            app:argType="com.shineshiao.endeavour.model.ProductModel" />
    </fragment>

</navigation>