<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.productdetail.views.ProductDetailFragment">
    <TextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:paddingHorizontal="5dp"
        android:lines="2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/img_favorites"
        tools:text="Diamond Label Shiraz "
        android:layout_width="0dp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/img_favorites"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_rawRes="@raw/heart" />


    <ImageView
        android:id="@+id/img_product"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="W,1:1"
        />

    <RatingBar
        android:id="@+id/rating_Bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.5"
        style="?android:attr/ratingBarStyleIndicator"
        android:progressTint="?android:attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_product"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rating_Bar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/white"
        android:paddingTop="10dp"
        >
        <TextView
            android:id="@+id/txt_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Title"
            android:paddingHorizontal="16dp"
            android:text="@string/details"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingVertical="10dp"
            />

        <TextView
            android:id="@+id/txt_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="120dp"
            android:paddingHorizontal="16dp"
            style="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_detail_title"

            />

        <TextView
            android:id="@+id/txt_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Body1"

            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/txt_price_title"
            tools:text="Description of product"
            />
        <Space
            android:id="@+id/space"
            app:layout_constraintTop_toBottomOf="@id/txt_price_title"
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <TextView
            android:id="@+id/txt_note_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="120dp"
            android:paddingHorizontal="16dp"
            style="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/note"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space"

            />

        <TextView
            android:id="@+id/txt_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Body1"

            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/txt_note_title"
            tools:text="Description of product"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>